starting right menu (flexbox)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         
         <!-- top white space -->
         <div id="top-bar">
-            <div id="top-menu">
+            <div id="left-menu">
                 
                 <a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">About</a> 
                 <a href="https://store.google.com/US/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a>
