build sign in button, hover style

--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
                 
                 <a href="https://www.google.com/imghp?hl=en&tab=wi&ogbl">Images</a>
 
-                <!-- Replace with images -->
                 <a class="apps" href""></a>
 
-
-                <a href="">Sign In</a>
+                <div id="signin">
+                    <a class="signin" href="" style="color: #fff; text-decoration: none">Sign in</a>
+                </div>
+                
 
 
             </div>
